--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,10 +1,8 @@
 <template name="home">
 	<div class="container">
 		<div class="row">
-			<div class="col">
-				<h2 class="lead">
-					Home page
-				</h2>
+			<div class="col s12 corcos-io-logo">
+				<h1 class="">Corcos.io</h1>
 			</div>
 		</div>
 	</div>
