--- a/client/views/layout/layout.html
+++ b/client/views/layout/layout.html
@@ -1,6 +1,8 @@
 <template name="layout">
+	<div id="bg_pattern"></div>
 	<div>
-		{{> navbar}}
+		{{> signin}}
+		<!-- {{> navbar}} -->
 		{{> yield}}
 	</div>
 	<div id="footer">
