--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -33,6 +33,10 @@ body {
   }
 }
 
+/* .z-depth-1{
+  @include box-shadow-2(0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12));
+} */
+
 .sign-in-button {
   float: right;
   border: 2px solid white;
@@ -42,4 +46,10 @@ body {
   color: white;
   padding: 0.5rem 1rem;
   font-size: 1.5em;
+  &:hover {
+    background-color: rgba(255,255,255,0.1);
+    box-shadow: (0 5px 11px 0 rgba(0, 0, 0, 0.18));
+    transition: box-shadow .25s ease;
+    /* @extend .z-depth-1; */
+  }
 }
