--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,9 +1,5 @@
 <template name="home">
-	<div class="container">
-		<div class="row">
-			<div class="col s12 corcos-io-logo">
-				<h1 class="">Corcos.io</h1>
-			</div>
-		</div>
+	<div class="corcos-io-logo">
+		<h1>Corcos.io</h1>
 	</div>
 </template>
