--- a/client/views/layout/layout.html
+++ b/client/views/layout/layout.html
@@ -6,11 +6,9 @@
 		{{> yield}}
 	</div>
 	<div id="footer">
-		<div class="container">
-		</div>
 	</div>
 </template>
 
 <head>
-	<title>Title</title>
+	<title>Corcos.io</title>
 </head>
