--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -24,32 +24,39 @@ body {
 .corcos-io-logo {
   font-family: 'Josefin Sans', sans-serif;
   color: #fff;
-  text-align: center;
+  display: table;
+  width: 100%;
   height: 100vh;
+  text-align: center;
+
   h1 {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 8em;
-    margin-top: 40%;
+    display: table-cell;
+    vertical-align: middle;
+    margin: auto;
   }
 }
+
 
 /* .z-depth-1{
   @include box-shadow-2(0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12));
 } */
 
 .sign-in-button {
-  float: right;
   border: 2px solid white;
   border-radius: 8px;
-  margin: 1rem 2rem;
   background: none;
   color: white;
   padding: 0.5rem 1rem;
   font-size: 1.5em;
+
+  position: fixed;
+  left:85%;
+  top: 5%;
   &:hover {
     background-color: rgba(255,255,255,0.1);
     box-shadow: (0 5px 11px 0 rgba(0, 0, 0, 0.18));
     transition: box-shadow .25s ease;
-    /* @extend .z-depth-1; */
   }
 }
