--- a/client/views/layout/layout.html
+++ b/client/views/layout/layout.html
@@ -1,7 +1,7 @@
 <template name="layout">
 	<div id="bg_pattern"></div>
 	<div>
-		{{> signin}}
+		<!-- {{> signin}} -->
 		<!-- {{> navbar}} -->
 		{{> yield}}
 	</div>
