--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -34,6 +34,7 @@ body {
     font-size: 8em;
     display: table-cell;
     vertical-align: middle;
+    transform: translateY(-5%);
     margin: auto;
   }
 }
