--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -36,3 +36,17 @@ body {
     margin: auto;
   }
 }
+
+.card {
+  margin: 5rem auto;
+  background-color: rgba(255,255,255,0.9);
+  width: 50vw;
+  .card-content {
+    .privacy-header {
+      font-weight: bold;
+    }
+    p {
+      font-size: 18px;
+    }
+  }
+}
